# COMP208-Group-23-Project

./: README.md  decks.js
backend/: .gitignore  README.md  conftest.py  main.py  pyproject.toml
backend/routes/: ai.py  analytics.py  auth.py  cards.py  deck.py  decks.py
backend/tests/: test_ai.py  test_analytics.py  test_auth.py  test_cards.py  test_database_models.py  test_leitner.py
frontend/: app.js  dashboard.html  deck.html  index.html  my_decks.html  progress.html  settings.html  study_session.html  styles.css
