[project]
name = "flashcards-api"
version = "0.1.0"
description = "The backend for the flashcards project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.131.0",
    "orjson>=3.11.7",
    "python-dotenv>=1.2.1",
    # asyncmy is included in the tortoise install
    "tortoise-orm[asyncmy]>=1.1.5",
]

# used for linting
[dependency-groups]
dev = [
    "ruff>=0.15.2",
]
