[project]
name = "flashcards-api"
version = "0.1.0"
description = "The backend for the flashcards project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "asyncmy>=0.2.11",
    "fastapi[standard]>=0.131.0",
    "google-genai[aiohttp]>=1.65.0",
    "orjson>=3.11.7",
    "python-dotenv>=1.2.1",
    "tortoise-orm[asyncmy]>=1.1.5",
]

# used for linting
[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
]

# this is for ty users only
# nothing should be misconfigured
[tool.ty.environment]
root = ["."]
python = ".venv"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
